Added research-staff template
PHA has nearly 100 research staff People CPT. Splitting into own
template.

--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -257,6 +257,11 @@ li.person {
     font-size: 28px;
     margin: 0;
   }
+  &.research-staff {
+    p.contact, p.expertise {
+      padding-right: 1.5rem;
+    }
+  }
   img {
     max-width: 100px;
     clear: left;
