--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,6 +8,7 @@ $rust: #6f2c3f;		  //rust
 $black: #2C2C33;      //black
 $grey: #e5e2e0;       //grey
 $darkgrey: #4A484C;   //dark grey
+$gold: #dbb003;		  //gold
 $flagship_icon: flagship-icon; //flagship icon
 $fa-font-path: "../fonts";
 
