--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -5,6 +5,9 @@
   .hide-for-print {
     display: none !important;
   }
+  h1 {
+    font-size: 2rem;
+  }
 }
 
 @media only screen and (max-width: 20em) {
