--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -63,11 +63,8 @@ em, i {
 }
 
 
-blockquote {
- @extend %extend_2;
-  p {
-    @extend %extend_2;
-  }
+blockquote p {
+  color: $black;
 }
 
 .italic {
@@ -443,34 +440,6 @@ ul {
   font-size: 74px;
   opacity: .8;
 }
-
-blockquote {
-  border-left: none;
-  padding: 9px 40px 0 10px;
-  color: #555;
-  font-size: 16px;
-  p {
-    color: #555;
-    font-size: 16px;
-  }
-  &:before {
-    content: "\e011";
-    font-family: 'flagship-icon';
-    font-style: normal;
-    speak: none;
-    font-weight: normal;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    font-size: 80px;
-    position: absolute;
-    bottom: 20%;
-    right: 8%;
-    opacity: .25;
-    color: $blue;
-  }
-}
-
-
 
 
 .wp-post-image {
