added new social media links

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -22,9 +22,10 @@ footer {
 }
 
 #social-media {
-  a {
-    padding: 10px;
-    margin-right: 10px;
+  @media only screen and (min-width: 40.063em) {
+    ul.inline-list {
+      float: right;
+    }
   }
 }
 
