--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -5277,7 +5277,7 @@ ol {
 #page {
   margin-top: 1rem; }
 
-.page-content li {
+.entry-content li:not(:last-child) {
   padding-bottom: 10px; }
 
 .alpha {
